# sbb

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
data/: io.chefe.sbb.desktop  io.chefe.sbb.json
src/: favorites.rs  lib.rs  main.rs  string_event_handler.rs
src/api/: mod.rs  models.rs
src/widgets/: connection.rs  connection_list.rs  date_time_picker_popover.rs  favorite_box.rs  location_entry.rs  location_row.rs  mod.rs  search.rs  section.rs  time_picker.rs  time_row.rs  via_box.rs
