[package]
name = "sbb"
version = "0.1.0"
authors = ["chefe <hi@chefe.io>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
gtk = { version = "0.9.2", features = ["v3_24"] }
gio = { version = "0.9.1", features = ["v2_60"] }
gdk = { version = "0.13.2" }
glib = { version = "0.10.3" }
chrono = { version = "0.4.19", features = ["serde"] }
libhandy = { version = "0.7.1" }

